cambios colores GUI y rounded corners

--- a/app/src/main/res/layout/activity_filtro.xml
+++ b/app/src/main/res/layout/activity_filtro.xml
@@ -63,7 +63,7 @@
         android:id="@+id/buttonAplicarFiltro"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
         android:text="@string/botonAplicarFiltro"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textStyle="bold"
