--- a/app/src/main/res/layout/activity_inicio_persona.xml
+++ b/app/src/main/res/layout/activity_inicio_persona.xml
@@ -17,7 +17,7 @@
         android:id="@+id/ConstraintLayoutAdoptante"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
         app:layout_constraintBottom_toTopOf="@id/ConstraintLayoutHogarPaso"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -56,7 +56,7 @@
         android:id="@+id/ConstraintLayoutHogarPaso"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
