--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,7 @@
         android:id="@+id/buttonIngresarLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
         android:text="@string/botonIngresar"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textStyle="bold"
@@ -56,7 +56,7 @@
         android:id="@+id/buttonRegistrarse"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
         android:text="@string/botonRegistrarse"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textStyle="bold"
@@ -71,7 +71,7 @@
         android:id="@+id/ConstraintLayoutIngresarConFacebook"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
 
         app:layout_constraintBottom_toTopOf="@id/ConstraintLayoutIngresarTwitter"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -110,7 +110,7 @@
         android:id="@+id/ConstraintLayoutIngresarTwitter"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
         app:layout_constraintBottom_toTopOf="@id/ConstraintLayoutIngresarGoogle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -147,7 +147,7 @@
         android:id="@+id/ConstraintLayoutIngresarGoogle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
