--- a/app/src/main/res/layout/activity_perfil_animal.xml
+++ b/app/src/main/res/layout/activity_perfil_animal.xml
@@ -18,10 +18,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:background="@color/tituloPerfil"
+        android:background="@drawable/roundcornercolorprimario"
         android:gravity="center_horizontal"
         android:text="@string/nombreAnimalPerfil"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/ScrollViewPerfilAnimal"
@@ -65,7 +65,7 @@
         android:id="@+id/ConstraintLayoutAdoptar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
         app:layout_constraintBottom_toTopOf="@id/ConstraintLayoutApadrinar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -101,7 +101,7 @@
         android:id="@+id/ConstraintLayoutApadrinar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
         app:layout_constraintBottom_toTopOf="@id/ConstraintLayoutDonar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -136,7 +136,7 @@
         android:id="@+id/ConstraintLayoutDonar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
