--- a/app/src/main/res/layout/activity_buscar_animales.xml
+++ b/app/src/main/res/layout/activity_buscar_animales.xml
@@ -17,7 +17,7 @@
         android:id="@+id/ConstraintLayoutFiltro"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
         app:layout_constraintBottom_toTopOf="@id/progressBarListaAnimales"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -53,10 +53,9 @@
 
     <ProgressBar
         android:id="@+id/progressBarListaAnimales"
-        style="@android:style/Widget.Holo.Light.ProgressBar"
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:progressTint="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@id/RecyclerViewAnimales"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -69,6 +68,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/progressBarListaAnimales" />
+        app:layout_constraintTop_toBottomOf="@id/progressBarListaAnimales"
+        android:layout_marginTop="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
