--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:id="@+id/buttonIngresar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/roundcornercolorprimario"
         android:text="@string/botonIngresar"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textStyle="bold"
