--- a/app/src/main/res/layout/layout_item_animal.xml
+++ b/app/src/main/res/layout/layout_item_animal.xml
@@ -15,8 +15,9 @@
             android:id="@+id/textViewItemNombreAnimal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/tituloPerfil"
-            android:text="@string/nombreAnimal"
+            android:background="@drawable/roundcornercolorprimario"
+            android:text="@string/nombreAnimalPerfil"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -29,7 +30,7 @@
         android:id="@+id/ConstraintLayoutDetallesItem"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="@color/datosPerfil"
+        android:background="@drawable/roundcornercolordatos"
         android:padding="10dp"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
