--- a/app/src/main/res/layout/activity_buscar_animales.xml
+++ b/app/src/main/res/layout/activity_buscar_animales.xml
@@ -25,7 +25,7 @@
 
         <TextView
             android:id="@+id/textViewCargaListaAnimales"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/mostrarCargando"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
@@ -44,6 +44,7 @@
             android:contentDescription="@string/descripcionImagenFiltro"
             android:scaleType="fitCenter"
             android:tint="#FFFFFF"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
