--- a/app/src/main/res/layout/activity_filtro.xml
+++ b/app/src/main/res/layout/activity_filtro.xml
@@ -21,8 +21,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/spinnerFiltroTamano"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintBottom_toTopOf="@id/spinnerFiltroTamano" />
 
     <Spinner
         android:id="@+id/spinnerFiltroTamano"
@@ -59,7 +58,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextFiltroEdad"
-        app:layout_constraintBottom_toTopOf="@id/textViewDescriptores"
+        app:layout_constraintBottom_toTopOf="@id/checkBoxNecesidadesEspeciales"
         tools:ignore="Autofill"
         android:layout_marginTop="10dp"/>
 
@@ -74,18 +73,31 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ScrollViewDescriptores"
         android:layout_marginTop="20dp"/>
 
     <TextView
         android:id="@+id/textViewDescriptores"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="@string/textDescriptores"
+        android:textAlignment="center"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/ScrollViewDescriptores"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/ScrollViewDescriptores"
+        app:layout_constraintTop_toBottomOf="@id/checkBoxNecesidadesEspeciales" />
+
+    <CheckBox
+        android:id="@+id/checkBoxNecesidadesEspeciales"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/NecesidadesEspeciales"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editTextFiltroDistancia"
+        app:layout_constraintBottom_toTopOf="@id/textViewDescriptores"
         android:layout_marginTop="10dp"/>
 
     <ScrollView
