considerando edad en años y meses

--- a/app/src/main/res/layout/activity_filtro.xml
+++ b/app/src/main/res/layout/activity_filtro.xml
@@ -31,22 +31,42 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/spinnerFiltroTipo"
-        app:layout_constraintBottom_toTopOf="@id/editTextFiltroEdad"
+        app:layout_constraintBottom_toTopOf="@id/ConstraintLayoutEdad"
         android:layout_marginTop="10dp"/>
 
-    <EditText
-        android:id="@+id/editTextFiltroEdad"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/ConstraintLayoutEdad"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/hintEdad"
-        android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@id/editTextFiltroDistancia"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/spinnerFiltroTamano"
-        app:layout_constraintBottom_toTopOf="@+id/editTextFiltroDistancia"
-        tools:ignore="Autofill"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/spinnerFiltroTamano">
+
+        <EditText
+            android:id="@+id/editTextFiltroEdad"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/hintEdad"
+            android:inputType="number"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/spinnerCategoriaEdad"
+            tools:ignore="Autofill" />
+
+        <Spinner
+            android:id="@+id/spinnerCategoriaEdad"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:entries="@array/CategoriaEdad"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/editTextFiltroEdad"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
         android:id="@+id/editTextFiltroDistancia"
@@ -57,7 +77,7 @@
         android:inputType="number"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextFiltroEdad"
+        app:layout_constraintTop_toBottomOf="@+id/ConstraintLayoutEdad"
         app:layout_constraintBottom_toTopOf="@id/checkBoxNecesidadesEspeciales"
         tools:ignore="Autofill"
         android:layout_marginTop="10dp"/>
