--- a/app/src/main/res/layout/layout_item_animal.xml
+++ b/app/src/main/res/layout/layout_item_animal.xml
@@ -46,12 +46,12 @@
             android:contentDescription="@string/descripcionImagenAnimal"
             android:maxWidth="100dp"
             android:maxHeight="100dp"
-            android:scaleType="fitXY"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/textViewItemDetallesAnimal"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/icono_item_animal" />
+            app:srcCompat="@drawable/cargando_imagen" />
 
         <TextView
             android:id="@+id/textViewItemDetallesAnimal"
