--- a/app/src/main/res/layout/activity_buscar_animales.xml
+++ b/app/src/main/res/layout/activity_buscar_animales.xml
@@ -57,7 +57,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/progressBarListaAnimales"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintTop_toBottomOf="@id/progressBarListaAnimales" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
