--- a/app/src/main/res/layout/activity_perfil_animal.xml
+++ b/app/src/main/res/layout/activity_perfil_animal.xml
@@ -11,7 +11,7 @@
     android:paddingEnd="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="10dp"
-    tools:context=".ActivityPerfilAnimal">
+    tools:context=".views.ActivityPerfilAnimal">
 
     <TextView
         android:id="@+id/textViewNombrePerfilAnimal"
