--- a/app/src/main/res/layout/activity_buscar_animales.xml
+++ b/app/src/main/res/layout/activity_buscar_animales.xml
@@ -11,7 +11,7 @@
     android:paddingEnd="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="10dp"
-    tools:context=".ActivityBuscarAnimales">
+    tools:context=".views.ActivityBuscarAnimales">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ConstraintLayoutFiltro"
