--- a/app/src/main/res/layout/activity_filtro.xml
+++ b/app/src/main/res/layout/activity_filtro.xml
@@ -11,7 +11,7 @@
     android:paddingEnd="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="10dp"
-    tools:context=".ActivityFiltro">
+    tools:context=".views.ActivityFiltro">
 
     <Spinner
         android:id="@+id/spinnerFiltroTipo"
