--- a/app/src/main/res/layout/activity_menu_adoptante.xml
+++ b/app/src/main/res/layout/activity_menu_adoptante.xml
@@ -11,7 +11,7 @@
     android:paddingEnd="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="10dp"
-    tools:context=".ActivityMenuAdoptante">
+    tools:context=".views.ActivityMenuAdoptante">
 
     <ScrollView
         android:layout_width="match_parent"
