--- a/app/src/main/res/layout/activity_registrar_animal.xml
+++ b/app/src/main/res/layout/activity_registrar_animal.xml
@@ -11,7 +11,7 @@
     android:paddingEnd="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="10dp"
-    tools:context=".ActivityRegistrarAnimal">
+    tools:context=".views.ActivityRegistrarAnimal">
 
     <EditText
         android:id="@+id/editTextNombreAnimal"
