agregado ver solicitudes

--- a/app/src/main/res/layout/activity_hacer_solicitud.xml
+++ b/app/src/main/res/layout/activity_hacer_solicitud.xml
@@ -49,7 +49,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_descripcion_hacer_solicitud"
-        tools:ignore="Autofill" />
+        tools:ignore="Autofill"
+        android:gravity="end|start"/>
 
     <TextView
         android:id="@+id/tv_dinero_hacer_solicitud"
@@ -75,7 +76,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_dinero_hacer_solicitud"
         tools:visibility="visible"
         tools:ignore="Autofill"
-        android:inputType="number"/>
+        android:inputType="number" />
 
     <Button
         android:id="@+id/btn_hacer_solicitud"
